--- a/render.yaml
+++ b/render.yaml
@@ -8,19 +8,19 @@ services:
     startCommand: node index.js
     envVars:
       - key: DATABASE_URL
-        sync: false  # You'll set this manually in Render dashboard
+        sync: false  # Set to your Neon connection string
       - key: NODE_ENV
         value: production
 
-  # WhatsApp Bot
+  # WhatsApp Bot (Standalone - no n8n needed!)
   - type: web
     name: whatsapp-bot
     runtime: docker
     rootDir: whatsapp-bot
     dockerfilePath: ./Dockerfile
     envVars:
-      - key: N8N_WEBHOOK_URL
-        sync: false  # You'll set this to your n8n.cloud webhook URL
+      - key: DATABASE_URL
+        sync: false  # Set to your Neon connection string
       - key: DASHBOARD_URL
         sync: false  # Set to your dashboard URL, e.g., https://expense-dashboard.onrender.com
       - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
