--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -1,14 +1,18 @@
 {
   "name": "telegram-expense-bot",
   "version": "1.0.0",
-  "description": "Telegram bot for expense tracking",
+  "description": "Telegram bot for expense tracking with dashboard",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.64.0",
-    "pg": "^8.11.3",
-    "axios": "^1.6.2"
+    "express": "^4.18.2",
+    "axios": "^1.6.2",
+    "pg": "^8.11.3"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
